--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     container_name: chat-backend
     restart: always
     env_file: .env
+    ports:
+      - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
